Add aditional endpoints to match the new requirements.